kubernetes/immich/deps/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: immich
  name: immich-deps-policy
specs:
  # allow postgres from immich
  - endpointSelector: &postgres
      matchLabels:
        cnpg.io/cluster: immich-postgres
    ingress:
      - fromEndpoints: &immich
          - matchLabels:
              app.kubernetes.io/name: immich
        toPorts:
          - ports:
              - protocol: TCP
                port: "5432"
  # allow redis connection from immich
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: immich-valkey
    ingress:
      - fromEndpoints: *immich
        toPorts:
          - ports:
              - protocol: TCP
                port: "6379"
  # allow postgres internal components
  # - dns resolution to primary
  # - replica connect to primary
  # - health check probe from cnpg operator
  # - get information from kube-apiserver
  - endpointSelector: *postgres
    ingress:
      - fromEndpoints:
          - *postgres
        toPorts:
          - ports:
              - protocol: TCP
                port: "5432"
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg
              app.kubernetes.io/instance: cnpg
        toPorts:
          - ports:
              - protocol: TCP
                port: "8000"
    egress:
      - toEndpoints:
          - *postgres
        toPorts:
          - ports:
              - protocol: TCP
                port: "5432"
      - toEntities: [kube-apiserver]
        toPorts:
          - ports:
              - protocol: TCP
                port: "6443"
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns:
                - matchName: "immich-postgres-rw.immich.svc.cluster.local."
  # backup and restore
  - endpointSelector: *postgres
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns:
                - matchName: &b2 s3.us-east-005.backblazeb2.com
      - toFQDNs:
          - matchName: *b2
        toPorts:
          - ports:
              - protocol: TCP
                port: "443"
